[package]
name = "pwb_ws_15"
version = "0.1.0"
authors = ["Norbert Melzer <timmelzer@gmail.com>"]

[[bin]]
name = "pwb_runner"

[dependencies]
peg = "~0.3.3"
ramp = "~0.2.0" #{ git = "https://github.com/Aatch/ramp.git" }#"~0.2.0"
rose_tree = "~0.1.1"

[dev-dependencies]
quickcheck = "~0.2.0"
quickcheck_macros = "~0.2.0"
